[workspace]
members = ["try-quinn"]

[workspace.dependencies]
anyhow = "1.0.100"
bytes = "1.11.0"
h3 = "0.0.8"
h3-quinn = "0.0.10"
http = "1.4.0"
quinn = { version = "0.11.9", default-features = false, features = ["rustls", "runtime-tokio", "ring"] }
rustls = { version = "0.23.33", features = ["ring"] }
rustls-native-certs = "0.8.3"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros", "time"] }
