[package]
name = "try-quinn"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
bytes = { workspace = true }
h3 = { workspace = true }
h3-quinn = { workspace = true }
http = { workspace = true }
quinn = { workspace = true }
rustls = { workspace = true }
rustls-native-certs = { workspace = true }
tokio = { workspace = true }
